# 26E1_3

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
aws/: cdk.json  deploy.sh  destroy.sh  package-lock.json  package.json  tsconfig.json
aws/lib/: cardio-stack.ts
aws/src/lambda/: Dockerfile  handler.py  handler_test.py  requirements.txt
docs/: ciclo_de_vida.md  data_dictionary.md  decisoes_tecnicas.md  relatorio_tecnico.md
notebooks/: 01_diagnostico_dados.ipynb  02_analise_experimentos.ipynb
scripts/: run_full_experiment.py  select_final_model.py  simulate_drift.py
src/cardio_ml/: __init__.py  config.py
src/cardio_ml/data/: __init__.py  ingestion.py  quality.py  split.py
src/cardio_ml/evaluation/: __init__.py  drift.py  metrics.py
src/cardio_ml/features/: __init__.py  dimensionality.py  preprocessing.py
src/cardio_ml/inference/: __init__.py  predict.py
src/cardio_ml/models/: __init__.py  registry.py  tuning.py
src/cardio_ml/serving/: __init__.py  api.py
src/cardio_ml/serving/static/: index.html
src/cardio_ml/tracking/: __init__.py  mlflow_utils.py
src/cardio_ml/training/: __init__.py  train.py
tests/: conftest.py  test_data.py  test_drift.py  test_inference.py  test_metrics.py  test_preprocessing.py  test_tuning.py
